@@ -5,6 +5,8 @@ import com.datastax.oss.driver.api.core.CqlSession;
 import com.datastax.oss.driver.api.core.CqlSessionBuilder;
 import com.datastax.oss.driver.api.core.cql.SimpleStatement;
 import com.datastax.oss.driver.api.querybuilder.SchemaBuilder;
+
+import org.springframework.beans.factory.annotation.*;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
@@ -14,38 +16,48 @@ import java.util.Map;
 @Configuration
 public class CassandraConfig {
 
-  private static final String KEYSPACE = "my_keyspace";
-  private static final String DATACENTER = "datacenter1";
+  @Value("${cassandra.host}")
+  private String cassandraHost;
+
+  @Value("${cassandra.port}")
+  private int cassandraPort;
+
+  @Value("${cassandra.keyspace}")
+  private String cassandraKeyspace;
+
+  @Value("${cassandra.table}")
+  private String cassandraTable;
+
+  @Value("${cassandra.datacenter}")
+  private String cassandraDatacenter;
 
   @Bean
-  public CqlSession cqlSession(CqlSessionBuilder builder) {
-    InetSocketAddress contactPoint = InetSocketAddress.createUnresolved("localhost", 9042);
+  public CqlSession cqlSession(CqlSessionBuilder sessionBuilder) {
+    InetSocketAddress address = InetSocketAddress.createUnresolved(cassandraHost,  cassandraPort);
+    sessionBuilder = sessionBuilder.addContactPoint(address).withLocalDatacenter(cassandraDatacenter);
+    sessionBuilder.withKeyspace((CqlIdentifier) null);
 
-    CqlSession session = builder
-        .addContactPoint(contactPoint)
-        .withLocalDatacenter(DATACENTER)
-        .build();
+    CqlSession session = sessionBuilder.build();
 
-    initializeKeyspaceAndTable(session);
-    return session;
-  }
-
-  private void initializeKeyspaceAndTable(CqlSession session) {
-    SimpleStatement createKeyspace = SchemaBuilder.createKeyspace(CqlIdentifier.fromCql(KEYSPACE))
+    SimpleStatement statement = SchemaBuilder.createKeyspace(cassandraKeyspace)
         .ifNotExists()
-        .withNetworkTopologyStrategy(Map.of(DATACENTER, 1))
+        .withNetworkTopologyStrategy(Map.of(cassandraDatacenter, 1))
         .build();
-    session.execute(createKeyspace);
+    session.execute(statement);
 
-    session.execute("""
-            CREATE TABLE IF NOT EXISTS %s.user_audit (
-                user_id UUID,
-                event_time TIMESTAMP,
-                event_type TEXT,
-                event_details TEXT,
-                PRIMARY KEY ((user_id), event_time)
-            ) WITH CLUSTERING ORDER BY (event_time DESC)
-               AND default_time_to_live = 31536000;
-        """.formatted(KEYSPACE));
+    session.execute(String.format("""
+      CREATE TABLE IF NOT EXISTS %s.%s (
+        user_id BIGINT,
+        event_time TIMESTAMP,
+        event_type TEXT,
+        event_details TEXT,
+        PRIMARY KEY ((user_id), event_time)
+      ) WITH CLUSTERING ORDER BY (event_time DESC)
+        AND default_time_to_live = 31536000;
+      """, cassandraKeyspace, cassandraTable));
+
+    return sessionBuilder
+        .withKeyspace(cassandraKeyspace)
+        .build();
   }
 }
